# tetris-atlas

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  fly.toml
.devcontainer/: devcontainer.json
.docker/: Dockerfile.cpu.run  Dockerfile.dev  Dockerfile.run  Dockerfile.uv  docker-compose-dev.yml
benches/: benches.rs  tetris_board.rs  tetris_piece.rs
crates/proc-macros/src/: lib.rs
crates/tensorboard/: Cargo.toml  build.rs
crates/tensorboard/src/: lib.rs
crates/tensorboard/src/tensorboard/: event_file_writer.rs  summary.rs  summary_writer.rs
crates/tensorboard/src/tensorboard_generated/: tensorboard.rs
crates/tetris-benches/: Cargo.toml
crates/tetris-benches/benches/: benches.rs
crates/tetris-benches/src/: benches.rs  lib.rs
crates/tetris-game/: Cargo.toml
crates/tetris-game/src/: lib.rs  tetris.rs  tetris_explorer.rs  utils.rs
crates/tetris-ml/: Cargo.toml
crates/tetris-ml/src/: beam_search.rs  checkpointer.rs  data.rs  grad_accum.rs  lib.rs  modules.rs  optim.rs  tetris_tui.rs
crates/tetris-ml/src/tensor/: mod.rs  ops.rs  tensors.rs  wrapped_tensor.rs
crates/tetris-playground/: Cargo.toml
crates/tetris-playground/src/: lib.rs
crates/tetris-search/: Cargo.toml
crates/tetris-search/src/: beam_search.rs  explorer.rs  lib.rs
crates/tetris-tensor/: Cargo.toml
crates/tetris-tensor/src/: lib.rs  ops.rs  tensors.rs  wrapped_tensor.rs
crates/tetris-utils/: Cargo.toml
crates/tetris-utils/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
proc-macros/: Cargo.toml
proc-macros/src/: lib.rs
scripts/: download_tensorboard_protos.sh  plot_tetris_atlas_stats_feoxdb.py  plot_tetris_atlas_stats_rocksdb.py
src/: atlas.rs  beam_search.rs  benches.rs  checkpointer.rs  data.rs  dataset.rs  grad_accum.rs  infer.rs  lib.rs  main.rs  model.rs  modules.rs  ops.rs  optim.rs  par.rs  tensors.rs  tetris.rs  tetris_beam_supervised.rs  tetris_board.rs  tetris_dqn.rs  tetris_evolution_player_model.rs  tetris_exceed_the_mean.rs  tetris_explorer.rs  tetris_policy_gradients.rs  tetris_q_learning.rs  tetris_q_learning_transformer.rs  tetris_simple_imitation.rs  tetris_simple_player_model.rs  tetris_transition_model.rs  tetris_transition_transformer_model.rs  tetris_tui.rs  tetris_value_function.rs  tetris_world_model.rs  train.rs  utils.rs  wrapped_tensor.rs
src/hf/: data.rs  grad_accum.rs  mod.rs  model.rs  ops.rs  rl.rs  train.rs
src/tensorboard/: event_file_writer.rs  masked_crc32c.rs
src/tensorboard_generated/: google.protobuf.rs  mod.rs  tensorboard.rs
tensorboard/: build.rs
tensorboard/src/tensorboard/: event_file_writer.rs  mod.rs  record_writer.rs  summary.rs  summary_writer.rs
tensorboard/src/tensorboard_generated/: google.protobuf.rs  mod.rs
