[package]
name = "tetris-atlas"
version = "0.1.0"
edition = "2024"
authors = ["Alex Comerford <alex@taoa.io>"]
publish = false

[lib]
name = "tetris_atlas"
path = "src/lib.rs"

[[bin]]
name = "tetris_atlas"
path = "src/main.rs"

[features]
default = []
candle-cuda = ["candle-core/cuda", "candle-nn/cuda"]
candle-metal = ["candle-core/metal", "candle-nn/metal"]
never-inline = []

# Float dtype selection - choose exactly one
dtype-f16 = []
dtype-bf16 = []
dtype-f32 = []
dtype-f64 = []

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
rand = { version = "0.9.2", features = ["small_rng"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["formatting"] }
rayon = "1.10.0"
crossbeam = "0.8.4"
crossbeam-queue = "0.3.12"
dashmap = "6.1.0"
bincode = "1.3.3"
itertools = "0.14.0"
ruint = "1.15.0"
inventory = "0.3"
candle-core = "0.9.2-alpha.2"
candle-nn = "0.9.2-alpha.2"
gethostname = "1.0.2"
image = "0.25.8"
ulid = "1.2.1"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
pprof = { version = "0.15", features = [
    "flamegraph",
    "criterion",
    "prost-codec",
] }
criterion = { version = "0.5.1", features = ["html_reports"] }

prost = "0.13"
prost-types = "0.13"

proc-macros = { path = "proc-macros" }
tensorboard = { path = "tensorboard" }
num_cpus = "1.17.0"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]

[build-dependencies]
prost-build = "0.13"

[[bench]]
name = "benches"
harness = false

[profile.bench]
debug = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release]
debug = true
lto = "fat"
codegen-units = 1
opt-level = 3

[lints.clippy]
too_many_arguments = "allow"
needless_pass_by_value = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
many_single_char_names = "allow"
similar_names = "allow"
unreadable_literal = "allow"
unused_variables = "allow"
dead_code = "allow"
unused_mut = "allow"
unused_assignments = "allow"
items_after_statements = "allow"
redundant_closure = "allow"
needless_borrow = "allow"
option_map_unit_fn = "allow"
semicolon_if_nothing_returned = "allow"
uninlined_format_args = "allow"
unnecessary_cast = "allow"
cast_precision_loss = "allow"
doc_markdown = "allow"
inline_always = "allow"
must_use_candidate = "allow"
missing_const_for_fn = "allow"
type_repetition_in_bounds = "allow"
elidable_lifetime_names = "allow"
use_self = "allow"
new_without_default = "allow"
uninit_assumed_init = "allow"
iter_without_into_iter = "allow"
ptr_arg = "allow"
ptr_as_ptr = "allow"
redundant_clone = "allow"


unwrap_used = "warn"
expect_used = "warn"
panic = "deny"
todo = "deny"
unimplemented = "deny"
unreachable = "deny"
