[package]
name = "tensorboard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
prost = "0.13"
prost-types = "0.13"
image = "0.25.8"
gethostname = "1.0.2"
crc32fast = "1.4.2"

[build-dependencies]
prost-build = "0.13"

[lib]
name = "tensorboard"
path = "src/lib.rs"
doctest = false
