[package]
name = "tetris-benches"
version = "0.1.0"
edition = "2024"
authors = ["Alex Comerford <alex@taoa.io>"]
publish = false

[lib]
name = "tetris_benches"
path = "src/lib.rs"

[[bench]]
name = "benches"
harness = false

[dependencies]
tetris-game = { path = "../tetris-game" }
tetris-ml = { path = "../tetris-ml" }
rand = { version = "0.9.2", features = ["small_rng"] }
inventory = "0.3"
criterion = { version = "0.5.1", features = ["html_reports"] }
pprof = { version = "0.15", features = [
    "flamegraph",
    "criterion",
    "prost-codec",
] }

[lints]
workspace = true
