[package]
name = "tetris-game"
version = "0.1.0"
edition = "2024"
authors = ["Alex Comerford <alex@taoa.io>"]
publish = false

[lib]
name = "tetris_game"
path = "src/lib.rs"

[features]
default = []
never-inline = []

[dependencies]
rand = { version = "0.9.2", features = ["small_rng"] }
itertools = "0.14.0"
ruint = "1.15.0"
bincode = "1.3.3"
serde = { version = "1.0.226", features = ["derive"] }
rayon = "1.10.0"
proc-macros = { path = "../proc-macros" }

[lints]
workspace = true
