[package]
name = "tetris-game"
version = "0.1.0"
edition = "2021"
authors = ["Alex Comerford <alex@taoa.io>"]
publish = false

[lib]
name = "tetris_game"
path = "src/lib.rs"

[features]
default = []
never-inline = []

[dependencies]
rand = { version = "0.9.2", features = ["small_rng"] }
proc-macros = { path = "../proc-macros" }

[lints]
workspace = true
