[package]
name = "tetris-ml"
version = "0.1.0"
edition = "2024"
authors = ["Alex Comerford <alex@taoa.io>"]
publish = false

[lib]
name = "tetris_ml"
path = "src/lib.rs"

# Binaries are auto-discovered from src/bin/*.rs

[features]
default = []
candle-cuda = ["candle-core/cuda", "candle-nn/cuda"]
candle-metal = ["candle-core/metal", "candle-nn/metal"]
never-inline = []

# Float dtype selection - choose exactly one
dtype-f16 = []
dtype-bf16 = []
dtype-f32 = []
dtype-f64 = []

[dependencies]
tetris-game = { path = "../tetris-game" }
tetris-tensor = { path = "../tetris-tensor" }
proc-macros = { path = "../proc-macros" }
tensorboard = { path = "../tensorboard" }

anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
rand = { version = "0.9.2", features = ["small_rng"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["formatting"] }
rayon = "1.10.0"
crossbeam = "0.8.4"
crossbeam-queue = "0.3.12"
crossbeam-skiplist = "0.1.3"
dashmap = "6.1.0"
bincode = "1.3.3"
itertools = "0.14.0"
ruint = "1.15.0"
candle-core = "0.9.2-alpha.2"
candle-nn = "0.9.2-alpha.2"
gethostname = "1.0.2"
image = "0.25.8"
ulid = "1.2.1"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
prost = "0.13"
prost-types = "0.13"
num_cpus = "1.17.0"
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.42.0", features = ["full"] }
rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
backoff = "0.4.0"
feoxdb = { path = "../../vendor/feoxdb" }
crossbeam-channel = "0.5.15"
ctrlc = "3.4"
heed = "0.22.0"

[build-dependencies]
prost-build = "0.13"

[lints]
workspace = true
