[package]
name = "tetris-ml"
version = "0.1.0"
edition = "2024"
authors = ["Alex Comerford <alex@taoa.io>"]
publish = false
description = "ML building blocks for Tetris: modules, optimizers, tensors, data generation"

[lib]
name = "tetris_ml"
path = "src/lib.rs"

[features]
default = []
candle-cuda = ["candle-core/cuda", "candle-nn/cuda"]
candle-metal = ["candle-core/metal", "candle-nn/metal"]
never-inline = []

# Float dtype selection - choose exactly one
dtype-f16 = []
dtype-bf16 = []
dtype-f32 = []
dtype-f64 = []

[dependencies]
# Internal crates
tetris-game = { path = "../tetris-game" }
tetris-search = { path = "../tetris-search" }
proc-macros = { path = "../proc-macros" }

# Core
anyhow = "1.0.95"
rand = { version = "0.9.2", features = ["small_rng"] }

# Logging
tracing = "0.1.41"

# Parallelism
rayon = "1.10.0"
crossbeam = "0.8.4"

# Serialization
serde = { version = "1.0.226", features = ["derive"] }

# ML
candle-core = "0.9.2-alpha.2"
candle-nn = "0.9.2-alpha.2"

# Utilities
image = "0.25.8"

# TUI (for tetris_tui module)
ratatui = "0.29"
crossterm = "0.28"

[lints]
workspace = true
