[package]
name = "tetris-playground"
version = "0.1.0"
edition = "2024"
authors = ["Alex Comerford <alex@taoa.io>"]
publish = false
description = "Demos, experiments, and reference implementations for Tetris atlas"

[lib]
name = "tetris_playground"
path = "src/lib.rs"

# Binaries are auto-discovered from src/bin/*.rs

[features]
default = []
candle-cuda = ["candle-core/cuda", "candle-nn/cuda"]
candle-metal = ["candle-core/metal", "candle-nn/metal"]
never-inline = []

# Float dtype selection - choose exactly one
dtype-f16 = []
dtype-bf16 = []
dtype-f32 = []
dtype-f64 = []

[dependencies]
# Internal crates
tetris-game = { path = "../tetris-game" }
tetris-search = { path = "../tetris-search" }
tetris-ml = { path = "../tetris-ml" }
proc-macros = { path = "../proc-macros" }
tensorboard = { path = "../tensorboard" }

# CLI
clap = { version = "4.5.28", features = ["derive"] }
ctrlc = "3.4"

# Core
anyhow = "1.0.95"
rand = { version = "0.9.2", features = ["small_rng"] }

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["formatting"] }

# Parallelism & concurrency
rayon = "1.10.0"
crossbeam = "0.8.4"
crossbeam-queue = "0.3.12"
crossbeam-channel = "0.5.15"
crossbeam-skiplist = "0.1.3"
dashmap = "6.1.0"
num_cpus = "1.17.0"

# Storage backends
rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
heed = "0.22.0"
feoxdb = "0.5.0"

# Serialization
bincode = "1.3.3"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
prost = "0.13"
prost-types = "0.13"

# ML
candle-core = "0.9.2-alpha.2"
candle-nn = "0.9.2-alpha.2"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Utilities
itertools = "0.14.0"
ruint = "1.15.0"
gethostname = "1.0.2"
image = "0.25.8"
ulid = "1.2.1"
tokio = { version = "1.42.0", features = ["full"] }
backoff = "0.4.0"

[lints]
workspace = true
