[package]
name = "tetris-tensor"
version = "0.1.0"
edition = "2024"
authors = ["Alex Comerford <alex@taoa.io>"]
publish = false

[lib]
name = "tetris_tensor"
path = "src/lib.rs"

[features]
default = []
never-inline = []

# Float dtype selection - choose exactly one
dtype-f16 = []
dtype-bf16 = []
dtype-f32 = []
dtype-f64 = []

[dependencies]
tetris-game = { path = "../tetris-game" }
proc-macros = { path = "../proc-macros" }
candle-core = "0.9.2-alpha.2"
candle-nn = "0.9.2-alpha.2"
anyhow = "1.0.95"
rand = { version = "0.9.2", features = ["small_rng"] }
tracing = "0.1.41"
rayon = "1.10.0"

[lints]
workspace = true
